--- a/style.css
+++ b/style.css
@@ -5,7 +5,13 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
-  font-weight: 500;
+  font-weight: 600;
+}
+
+header {
+  width: 180px;
+  margin-left: 240px;
+  color: #4E5150;
 }
 
 footer {
