--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@ header {
   color: #4E5150;
 }
 
+.user-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 180px;
+  margin:20px auto;
+}
+
 footer {
   font-family: "Montserrat", sans-serif;
   font-style: normal;
