--- a/style.css
+++ b/style.css
@@ -22,6 +22,14 @@ header {
   margin:20px auto;
 }
 
+form {
+  position: relative;
+}
+
+form p {
+  font-size: 18px;
+}
+
 footer {
   font-family: "Montserrat", sans-serif;
   font-style: normal;
