--- a/style.css
+++ b/style.css
@@ -30,6 +30,11 @@ form p {
   font-size: 18px;
 }
 
+.form-info {
+  margin: 30px 0;
+  position: relative;
+}
+
 footer {
   font-family: "Montserrat", sans-serif;
   font-style: normal;
