--- a/style.css
+++ b/style.css
@@ -42,6 +42,13 @@ form p {
   color: #828282;
 }
 
+.form-info label{
+  width: 40px;
+  display: block;
+  font-size:12px;
+  color: #4F4F4F;
+}
+
 input {
   width: 400px;
   max-width: 100%;
