--- a/style.css
+++ b/style.css
@@ -80,6 +80,29 @@ input {
   padding: 15px 5px;
 }
 
+.container {
+  background-color: #f2f2f2;
+  width: 400px;
+  height: 520px;
+  border-radius: 15px;
+  margin-right: 60px;
+  padding: 30px;
+}
+
+.box {
+  display: flex;
+  margin-top: 30px;
+}
+
+.info {
+  line-height: 30px;
+  padding-left: 20px;
+}
+
+#box-2 {
+  margin-bottom: 40px;
+}
+
 footer {
   font-family: "Montserrat", sans-serif;
   font-style: normal;
