--- a/style.css
+++ b/style.css
@@ -103,6 +103,22 @@ input {
   margin-bottom: 40px;
 }
 
+.shipping-price, .total-price {
+  border-top: 2px solid #bdbdbd;
+  margin-top: 40px;
+}
+
+.shipping-price, .total-price p {
+  display: inline;
+  float: right;
+}
+
+.shipping-price, .total-price h5 {
+  display: inline;
+  font-size:18px;
+  float: left;
+}
+
 footer {
   font-family: "Montserrat", sans-serif;
   font-style: normal;
