--- a/style.css
+++ b/style.css
@@ -108,12 +108,12 @@ input {
   margin-top: 40px;
 }
 
-.shipping-price, .total-price p {
+.shipping-price p, .total-price p {
   display: inline;
   float: right;
 }
 
-.shipping-price, .total-price h5 {
+.shipping-price h5, .total-price h5 {
   display: inline;
   font-size:18px;
   float: left;
