--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ input {
   padding: 30px;
 }
 
-.box {
+.item {
   display: flex;
   margin-top: 30px;
 }
@@ -99,7 +99,7 @@ input {
   padding-left: 20px;
 }
 
-#box-2 {
+#item-2 {
   margin-bottom: 40px;
 }
 
