--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ strike {
   border-radius: 15px;
 }
 
-.number {
+.quantity {
   width: 165px;
   border: 2px solid #828282;
   border-radius: 15px;
