--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
   margin: 50px auto;
 }
 
-.main-sec {
+.main {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -208,7 +208,7 @@ footer {
 }
 
 @media only screen and (max-width: 900px) {
-  .main-sec {
+  .main {
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
