--- a/style.css
+++ b/style.css
@@ -195,15 +195,11 @@ footer {
   color: #BDBDBD;
 }
 
-.username-github-link, .devchallengelink {
+.username-github-link, .devchallenge-link {
   color: #333;
 }
 
-.username-link:hover {
-  color: black;
-}
-
-.devchallenges-link:hover {
+.username-github-link:hover, .devchallenge-link:hover {
   color: #f7542e;
 }
 
